Fix back button visibility #561

--- a/webclient/static/scss/_app-global.scss
+++ b/webclient/static/scss/_app-global.scss
@@ -441,7 +441,7 @@ form {
   @extend .d-flex, .flex-column, .h-100;
 
   &.app-entity-historie {
-    height: 95% !important;
+    height: 92% !important;
   }
 
   &.app-entity-soubor {
